--- a/Módulo 2/Tema 3_CSS3/Chuleta_Pos/css/positions.css
+++ b/Módulo 2/Tema 3_CSS3/Chuleta_Pos/css/positions.css
@@ -191,3 +191,110 @@
     /* Cambiamos el orden html de los elementos*/
     order:3;
 }
+
+/* ------- CSS Grid ------ */
+[class^=grid-child] {
+    background-color: coral;
+}
+
+.grid-parent {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    /*grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));*/
+/* Para repetir la misma acción varias veces 
+    grid-template-columns: repeat (4 1fr 2fr);
+    grid-template-columns: 1fr 2fr 1fr 2fr 1fr 2fr 1fr 2fr; */
+    grid-template-rows: 1fr 2fr;
+    gap: 10px;
+}
+
+@media screen and (max-width:920px) {
+    .grid-parent {
+        grid-template-columns: 1fr 2fr;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .grid-parent {
+        grid-template-columns: 1fr;
+    }
+}
+
+.grid-child-3 {
+    background-color: rgb(250, 181, 153);
+}
+
+/* ---------- CSS Grid lineas ------------- */
+.grid-parent-2 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 10px;
+}
+
+.grid-parent-2 > .grid-child-1 {
+    grid-column: 1 / 3;
+    grid-row: 1;
+}
+
+.grid-parent-2 > .grid-child-2 {
+    grid-column: 3;
+    grid-row: 1 / 3;
+}
+
+.grid-parent-2 > .grid-child-3 {
+    grid-column: 1 / 3;
+    grid-row: 2 / 5;
+}
+
+.grid-parent-2 > .grid-child-4 {
+    grid-column: 3;
+    grid-row: 3;
+}
+
+.grid-parent-2 > .grid-child-5 {
+    grid-column: 2 / 4;
+    grid-row: 4;
+}
+
+.grid-parent-2 > .grid-child-6 {
+    grid-column: 1;
+    grid-row: 2;
+}
+/* ----------- CSS Grid por areas -----------*/
+.grid-parent-3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 10px;
+}
+
+.grid-parent-3 > .grid-child-1 {
+    grid-column: 1 / 3;
+    grid-row: 1;
+}
+
+.grid-parent-3 > .grid-child-2 {
+    grid-column: 3;
+    grid-row: 1 / 3;
+}
+
+.grid-parent-3 > .grid-child-3 {
+    grid-column: 1 / 3;
+    grid-row: 2 / 5;
+}
+
+.grid-parent-3 > .grid-child-4 {
+    grid-column: 3;
+    grid-row: 3;
+}
+
+.grid-parent-3 > .grid-child-5 {
+    grid-column: 2 / 4;
+    grid-row: 4;
+}
+
+.grid-parent-3 > .grid-child-6 {
+    grid-column: 1;
+    grid-row: 2;
+}
