--- a/Módulo 2/Tema 3_CSS3/Chuleta_Pos/css/positions.css
+++ b/Módulo 2/Tema 3_CSS3/Chuleta_Pos/css/positions.css
@@ -195,6 +195,11 @@
 /* ------- CSS Grid ------ */
 [class^=grid-child] {
     background-color: coral;
+    /* Centrar todos los H2 de los hijos */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    j
 }
 
 .grid-parent {
@@ -264,37 +269,109 @@
 /* ----------- CSS Grid por areas -----------*/
 .grid-parent-3 {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: 150px 2fr 2fr;
+    grid-template-rows: 1fr 4fr 1fr;
     gap: 10px;
+
+    grid-template-areas: "nav nav nav"
+                            "content1 content2 content3"
+                            " footer footer footer";
+    /*justify-items: center;
+    align-items: center;*/
 }
 
 .grid-parent-3 > .grid-child-1 {
-    grid-column: 1 / 3;
-    grid-row: 1;
+    grid-area: nav;
 }
 
 .grid-parent-3 > .grid-child-2 {
-    grid-column: 3;
-    grid-row: 1 / 3;
+    grid-area: content1;
 }
 
 .grid-parent-3 > .grid-child-3 {
-    grid-column: 1 / 3;
-    grid-row: 2 / 5;
+    grid-area: content2;
 }
 
 .grid-parent-3 > .grid-child-4 {
-    grid-column: 3;
-    grid-row: 3;
+    grid-area: content3;
 }
 
 .grid-parent-3 > .grid-child-5 {
-    grid-column: 2 / 4;
-    grid-row: 4;
+    grid-area:footer;
 }
 
-.grid-parent-3 > .grid-child-6 {
-    grid-column: 1;
-    grid-row: 2;
+/* ------------ Degradados --------------- */
+[class^=gradient-] {
+    height: 100px;
+    margin-bottom: 10px;
+}
+
+.gradient-1 {
+    background: linear-gradient(to right, blueviolet, white);
+}
+
+.gradient-2 {
+    background: linear-gradient(to bottom, blue, white 20%, orange);
+}
+
+.gradient-3 {
+    background: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255,1)), url(../img/oficina.jpg);
+}
+
+.gradient-4 {
+    background: radial-gradient(coral, red, yellow);
+    box-shadow: 5px 5px 15px black;
+}
+
+/*--------------- Transformaciones -------------*/
+.transformation {
+    height: 100px;
+    width: 100px;
+    background-color: black;
+
+    transform: translate(300px, -20px) rotate(45deg) scale(1.5) skewX(25deg);
+}
+
+/*--------------- Transiciones --------------*/
+.transitions {
+    height: 100px;
+    width: 100px;
+    background-color: darkcyan;
+    color: white;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    /*transition-property: transform;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;*/
+    transition: all 0.5s ease-in-out;
+}
+
+.transitions:hover {
+    /*color: darkcyan;
+    background-color: whitesmoke;*/
+    transform: scale(1.3) rotate(3deg);
+    font-size: 2em;
+}
+
+.animations {
+    animation-name: slidein;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes slidein {
+    from {
+        margin-left: 100%;
+    }    
+
+    50% {
+        color: red;
+    }
+    
+    to {
+        margin-left: 0%;
+    }
 }
